--- a/src/themes/default.scss
+++ b/src/themes/default.scss
@@ -1,4 +1,5 @@
-:root {
+[data-container="jeditor"],
+[data-container="jeditor"][theme="default"] {
   --primary-50: #f1fafe;
   --primary-100: #e2f3fc;
   --primary-200: #bee7f9;
