--- a/src/themes/teal.scss
+++ b/src/themes/teal.scss
@@ -1,4 +1,4 @@
-:root {
+[data-container="jeditor"]body[theme="teal"] {
   --primary-50: #eefffc;
   --primary-100: #c5fffa;
   --primary-200: #8bfff5;
