--- a/src/themes/green.scss
+++ b/src/themes/green.scss
@@ -1,4 +1,4 @@
-[data-container="jeditor"][theme="green"] {
+[data-container="jeditor"][data-theme="green"] {
   --primary-50: #effef6;
   --primary-100: #e1feee;
   --primary-200: #b8fad6;
