--- a/src/themes/pink.scss
+++ b/src/themes/pink.scss
@@ -1,4 +1,4 @@
-[data-container="jeditor"][theme="pink"] {
+[data-container="jeditor"][data-theme="pink"] {
   --primary-50: #fef1f7;
   --primary-100: #fee5f0;
   --primary-200: #fecce3;
