--- a/src/themes/themes.scss
+++ b/src/themes/themes.scss
@@ -1,4 +1,4 @@
-@import "default.scss";
-@import "green.scss";
-@import "pink.scss";
-@import "teal.scss";
+@use "default.scss";
+@use "green.scss";
+@use "pink.scss";
+@use "teal.scss";
